[workspace]
members = ["bevy_rapier2d", "bevy_rapier3d"]

[profile.release]
codegen-units = 1

[patch.crates-io]
nalgebra = { path = "../nalgebra" }
parry3d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
parry2d = { git = "https://github.com/deontologician/parry", branch = "bevy-components" }
rapier3d = { git = "https://github.com/deontologician/rapier", branch = "dep-hacks" }
rapier2d = { git = "https://github.com/deontologician/rapier", branch = "dep-hacks" }
#rapier2d = { git = "https://github.com/dimforge/rapier" }
#rapier3d = { git = "https://github.com/dimforge/rapier" }

bevy = { git = "https://github.com/deontologician/bevy/", branch = "deps-hack" } # main
